force-app/main/default/objects/Feedback__c/fields/LLM__c.field-meta.xml
<CustomField>
    <fullName>LLM__c</fullName>
    <label>LLM</label>
    <referenceTo>LLM__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>