force-app/main/default/objects/Feedback__c/fields/PromptLibrary__c.field-meta.xml
<CustomField>
    <fullName>PromptLibrary__c</fullName>
    <label>Prompt Library</label>
    <referenceTo>PromptLibrary__c</referenceTo>
    <relationshipLabel>Feedback</relationshipLabel>
    <relationshipName>Feedback</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>