force-app/main/default/objects/Feedback__c/fields/ResponseFeedback__c.field-meta.xml
<CustomField>
    <fullName>ResponseFeedback__c</fullName>
    <label>Response Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Response__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Response is well formatted</fullName>
            </value>
            <value>
                <fullName>Response covered all requirements</fullName>
            </value>
            <value>
                <fullName>Explanations are relevant</fullName>
            </value>
            <value>
                <fullName>Response is not well formatted</fullName>
            </value>
            <value>
                <fullName>Response does not cover all requirements</fullName>
            </value>
            <value>
                <fullName>Explanations are not relevant</fullName>
            </value>
            <value>
                <fullName>Some of the requirements are not covered</fullName>
            </value>
            <value>
                <fullName>Response can be much better</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>